--- a/session-08/intro_express/package.json
+++ b/session-08/intro_express/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^8.3.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.15"
   }
