--- a/express_mongoose/package.json
+++ b/express_mongoose/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "intro_express",
+  "name": "express_mongoose",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "eslint": "^8.3.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.14"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.15"
   }
 }
